Fixed Grapher Ui overflow issues

--- a/ui/src/styles/main.css
+++ b/ui/src/styles/main.css
@@ -29,6 +29,16 @@ html {
   height: 100%;
 }
 
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background-color: rgba(0,0,0,.5);
+    box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
 body {
   xfont-family: 'Open Sans',sans-serif;
   font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
